Add .editorconfig and explanatory comments for compiler process